# logs_parser

./: .gitignore  README.md  cli.py  minio_utils.py  parse_log.py  parse_logs.ipynb  pyproject.toml  requirements.txt  url_parsing.py
logs_parser/: catalog.py  cli.py  context.py  db_interactions.py  minio_utils.py  parse_log.py  process_logs.py  url_parsing.py
